fix: replace `List.of` with `Arrays.asList` for inventory to allow for `null` values